--- a/style.css
+++ b/style.css
@@ -5,12 +5,27 @@
 }
 body {
     font-family: 'Inter';
-    height: 100vh;
     background: #fff;
     display: flex;
-    align-items: center;
+    margin-top: 150px;
     justify-content: center;
     text-align: center;
+}
+.form-element {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  }
+  form button {
+    width:60%;
+    padding 20px;
+    color: White;
+    background: #EA088C;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    height: 48px;
+
 }
 
 .logo {
@@ -30,7 +45,7 @@ body {
         align-items: center;
       }
       a:link {
-        color: green; 
+        color: #EA088C; 
         background-color: transparent; 
         text-decoration: none;
       }
