--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Teko:wght@300..700&display=swap');
 *{
     box-sizing: border-box ;
 }
 body {
-    font-family: 'Inter';
+    font-family: "Open Sans", sans-serif;
     background: #fff;
     display: flex;
-    margin-top: 150px;
+    margin-top: 32px;
+    margin-left: 24px;
     justify-content: center;
-    text-align: center;
+    text-align: left;
 }
 .form-element {
   display: flex;
@@ -17,8 +19,8 @@ body {
   margin-bottom: 20px;
   }
   form button {
-    width:60%;
-    padding 20px;
+    width:500px;
+    padding 16px;
     color: White;
     background: #EA088C;
     border-radius: 8px;
@@ -27,7 +29,19 @@ body {
     height: 48px;
 
 }
-
+.dbold{
+        font-size: 14px;
+    font-weight:bold;
+      text-align: left;
+        line-height: 30px;
+        color: #333;}
+.dregular{
+     font-size: 14px;
+    font-weight: 300;
+          text-align: left;
+        line-height: 30px;
+        color: #333;
+}
 .logo {
     display: flex;
     align-items: center;
