--- a/jobs/style.css
+++ b/jobs/style.css
@@ -1,56 +1,53 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Teko:wght@300..700&display=swap');
 *{
     box-sizing: border-box ;
 }
 body {
-    font-family: 'Inter';
+    font-family: "Open Sans", sans-serif;
     background: #fff;
     display: flex;
+    margin-top: 32px;
+    margin-left: 24px;
     justify-content: center;
-    text-align: center;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-form{
-    background: white;
-    padding: 0px 60px 60px 60px;
-    width: 500px;
-    max-width: calc(100%-60px);
-    border-radius: 8px;
+    text-align: left;
 }
 .form-element {
-display: flex;
-flex-direction: column;
-margin-bottom: 20px;
-}
-.form-element span {
-    margin-bottom: 10px;
-}
-input, textarea {
-    border: 1px solid #eee;
-    line-height: 2;
-    padding: 8px;
-    border-radius: 8px;
-    font-size: 16px;
-}
-form button {
-    width:100%;
-    padding 20px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  }
+  form button {
+    width:500px;
+    padding 16px;
     color: White;
     background: #EA088C;
     border-radius: 8px;
     border: none;
     font-size: 16px;
     height: 48px;
-    cursor: pointer;
 
 }
+.dbold{
+        font-size: 14px;
+    font-weight:bold;
+      text-align: left;
+        line-height: 30px;
+        color: #333;}
+.dregular{
+     font-size: 14px;
+    font-weight: 300;
+          text-align: left;
+        line-height: 30px;
+        color: #333;
+}
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .header-image {
     background-image: url(“Desifaves_logo.png”);
     }
@@ -59,11 +56,19 @@ form button {
         font-size: 14px;
         line-height: 30px;
         color: #333;
+        align-items: center;
       }
-      h2 {
-        font-size: 14px;
-        line-height: 30px;
-        color: #333;
+h2{font-size: 14px;
+line-height: 30px;
+color: #333;
+}
+      a:link {
+        color: #EA088C; 
+        background-color: transparent; 
+        text-decoration: none;
       }
 
-    
+      hr.class-5 {
+        background-color: #fff;
+        border-top: 1px #eee;
+}
