--- a/jobs/style.css
+++ b/jobs/style.css
@@ -13,6 +13,12 @@ body {
     justify-content: center;
     text-align: left;
 }
+.desif {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 66%;
+}
 .form-element {
   display: flex;
   flex-direction: column;
@@ -30,14 +36,14 @@ body {
 
 }
 .dbold{
-        font-size: 14px;
+        font-size: 16px;
     font-weight:bold;
       text-align: left;
         line-height: 30px;
         color: #333;}
 .dregular{
-     font-size: 14px;
-    font-weight: 300;
+     font-size: 16px;
+    font-weight: 500;
           text-align: left;
         line-height: 30px;
         color: #333;
